# rust_backend

./: Cargo.toml  README.md  dfx.json  draft.md  package-lock.json  package.json  usage.md  webpack.config.js
src/contract/: Cargo.toml  contract.did
src/contract/src/: lib.rs  lib_new.rs
src/declarations/contract/: contract.did  contract.did.d.ts  contract.did.js  index.js
src/declarations/publisher/: index.js  publisher.did.d.ts  publisher.did.js
src/declarations/rust_backend/: index.js
src/declarations/rust_backend_assets/: index.js
src/declarations/subscriber/: index.js  subscriber.did  subscriber.did.d.ts  subscriber.did.js
src/declarations/user_profile/: index.js  user_profile.did.d.ts  user_profile.did.js
src/img/: Cargo.toml  img.did
src/img/src/: Avatar.mo  lib.rs
src/post_service/: Cargo.toml  post_service.did
src/post_service/src/: actor.rs  lib.rs
src/post_service/src/post/: api.rs  domain.rs  service.rs
src/publisher/: Cargo.toml  publisher.did
src/publisher/src/: lib.rs
src/rust_backend/: Cargo.toml
src/rust_backend_assets/src/: index.html  index.js
src/subscriber/: Cargo.toml
src/subscriber/src/: lib.rs
src/token/: main.mo
src/token_primary/: main.mo
src/user_profile/: Cargo.toml  user_profile.did
src/user_profile/src/: lib.rs
src/user_service/src/: context.rs  env.rs
src/user_service/src/post/: error.rs  service.rs
