[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.4"
ic-cdk-macros = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
getrandom = { version = "0.2.6", features = ["js"]}
#rand = { version = "0.8.5", features = ["small_rng"] }
#random-string = "1.0.0"
