[package]
name = "user_profile"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.4"
ic-cdk-macros = "0.4"
lazy_static = "1.4.0"
serde = "1.0.111"
hex = "0.4.3"
libsecp256k1 = "0.6.0"
easy-hasher = "2.2.1"
